[gd_scene load_steps=2 format=3 uid="uid://58urxi1hoy0g"]

[ext_resource type="Script" path="res://face_ui/mouth_select.gd" id="1_0sdhf"]

[node name="Node2D" type="Node2D"]
position = Vector2(-24, 0)
script = ExtResource("1_0sdhf")

[node name="1" type="Button" parent="."]
offset_left = 990.0
offset_top = 210.0
offset_right = 1047.0
offset_bottom = 241.0
scale = Vector2(2.64131, 1.5)
text = "mouth1
"

[node name="2" type="Button" parent="."]
offset_left = 992.0
offset_top = 277.0
offset_right = 1049.0
offset_bottom = 308.0
scale = Vector2(2.64131, 1.5)
text = "mouth2
"

[node name="3" type="Button" parent="."]
offset_left = 990.0
offset_top = 352.0
offset_right = 1047.0
offset_bottom = 383.0
scale = Vector2(2.64131, 1.5)
text = "mouth3
"

[node name="4" type="Button" parent="."]
offset_left = 990.0
offset_top = 410.0
offset_right = 1059.0
offset_bottom = 441.0
scale = Vector2(2.64131, 1.5)
text = "mouth4
"

[node name="5" type="Button" parent="."]
offset_left = 989.0
offset_top = 465.0
offset_right = 1058.0
offset_bottom = 496.0
scale = Vector2(2.64131, 1.5)
text = "mouth5
"

[node name="6" type="Button" parent="."]
offset_left = 985.0
offset_top = 521.0
offset_right = 1054.0
offset_bottom = 552.0
scale = Vector2(2.64131, 1.5)
text = "mouth6
"

[node name="sliders" type="Node2D" parent="."]
position = Vector2(917, 563)
scale = Vector2(0.5, 0.5)

[node name="y" type="HSlider" parent="sliders"]
offset_left = -100.0
offset_top = -81.0
offset_right = 85.0
offset_bottom = -21.0
min_value = -233.0
max_value = 300.0
value = 300.0

[node name="Label" type="Label" parent="sliders/y"]
layout_mode = 0
offset_left = 50.0
offset_top = -100.0
offset_right = 169.0
offset_bottom = 5.0
theme_override_font_sizes/font_size = 76
text = "down/up"

[node name="x" type="HSlider" parent="sliders"]
offset_left = -101.0
offset_top = 85.0
offset_right = 84.0
offset_bottom = 145.0
min_value = -174.0
max_value = 247.0
value = 1.0

[node name="Label" type="Label" parent="sliders/x"]
layout_mode = 0
offset_left = -12.0
offset_top = -104.0
offset_right = 191.0
offset_bottom = 1.0
theme_override_font_sizes/font_size = 76
text = "right/left
"

[node name="rotate" type="HSlider" parent="sliders"]
offset_left = -72.0
offset_top = -244.0
offset_right = 113.0
offset_bottom = -184.0
min_value = -180.0
max_value = 180.0
value = -180.0

[node name="Label" type="Label" parent="sliders/rotate"]
layout_mode = 0
offset_left = -24.0
offset_top = -106.0
offset_right = 203.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 76
text = "rotate"

[connection signal="pressed" from="1" to="." method="a_on__pressed"]
[connection signal="pressed" from="2" to="." method="b_on__pressed"]
[connection signal="pressed" from="3" to="." method="c_on__pressed"]
[connection signal="pressed" from="4" to="." method="d_on__pressed"]
[connection signal="pressed" from="5" to="." method="e_on__pressed"]
[connection signal="pressed" from="6" to="." method="f_on__pressed"]
